[package]

name = "rustache"
version = "0.0.2"
authors = ["Jarrod Ruhland <jarrod.ruhland@gmail.com>",
           "Stephen Paul Weber <github@singpolyma.net>"]

description = "Mustache templating engine for rust"
license = "MIT"
documentation = "https://rustache.github.io/rustache/"
repository = "https://github.com/rustache/rustache.git"

[lib]

name = "rustache"
path = "src/lib.rs"

[dependencies]
regex = "^0.1"
rustc-serialize = "^0.3"
memstream = "0.0.1"
